# backend/src/modules/chat/dto/chat-response-dto.ts
@@ -1,0 +1,11 @@
+import { ApiProperty } from "@nestjs/swagger";
+
+
+
+export class ChatResponseDto {
+    @ApiProperty({ type: Boolean })
+    success: boolean;
+
+    @ApiProperty({ type: String })
+    response: string;
+}
